# metis

./: README.md  pyproject.toml
pystock/: pystock.py
src/pystock/: __init__.py
test/: tests.py
